<resources>
    <string name="app_name">TeleSMS</string>
    <string name="call">Call</string>
    <string name="call_history">Call History</string>
    <string name="top_up">Top-Up</string>
    <string name="callback">SMS</string>

    <string name="card_no">Access Number</string>

    <string name="option_sms_inbox">Messages</string>
    <string name="option_reset_device">Update Device</string>
    <string name="option_clear_call_history">Clear Call History</string>
    <string name="option_about">About</string>
    <string name="option_share">Share</string>
    <string name="option_check_call_rate">Check Call Rate</string>
    <string name="option_settings">Settings</string>

    <string name="setting_card_no">Card No</string>
    <string name="country_code">Country Code</string>
    <string name="access_number">Local Access Number</string>
    <string name="international_prefix">International Prefix</string>
    <string name="separating_characters">Separating Characters</string>
    <string name="pin_number">Pin Number</string>
    <string name="end_character">End Character</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string-array name="access_address_array">
        <item>Calgary</item>
        <item>Ontario</item>
        <item>Sasktoon</item>
        <item>Regina</item>
        <item>Edmonton</item>
        <item>UK (national # )</item>
        <item>Ottawa</item>
        <item>Montreal Quebec</item>
        <item>Vancouver</item>
        <item>France</item>
        <item>New Zealand</item>
        <item>Mexico Cancun</item>
        <item>Isreal</item>
        <item>HongKong</item>
        <item>Australia Melbourne</item>
        <item>Australia Sydney</item>
        <item>Hamilton (In Canada)</item>
        <item>USA</item>
        <item>Chicago</item>
    </string-array>

    <string-array name="access_number_array">
        <item>587&#8211;288&#8211;0662</item>
        <item>416&#8211;477&#8211;0053</item>
        <item>306&#8211;803&#8211;5965</item>
        <item>306&#8211;993&#8211;4657</item>
        <item>780&#8211;851&#8211;1777</item>
        <item>03300270193</item>
        <item>613&#8211;693&#8211;1286</item>
        <item>438&#8211;788&#8211;1530</item>
        <item>778&#8211;783&#8211;0022</item>
        <item>0975122807</item>
        <item>036694781</item>
        <item>09982876739</item>
        <item>0772200053</item>
        <item>39733713</item>
        <item>386580564</item>
        <item>280730557</item>
        <item>(289)309&#8211;5505</item>
        <item>(469)283&#8211;2773</item>
        <item>773&#8211;897&#8211;9819</item>
    </string-array>

    <string name="empty_phone_number">Please fill phone number.</string>

    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="exit">Exit</string>
    <string name="region">Region</string>
    <string name="hint_region">Select Region</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="show_password">Show password</string>
    <string name="not_have_account">Not have an account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="alert_fill_fields">Please fill all fields.</string>
    <string name="alert_clear_history">Are you sure you want to clear called histories?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="switch_base_url">Use (DevIP)</string>
    <string name="not_available_topup">Please make 1 minutes calls to be allowed to be topped up.</string>

    <string name="reset_password">Reset Password</string>
    <string name="error_connect_server">Can not connect with server.</string>
    <string name="reset_device">Reset Device</string>
    <string name="success_update_imei">The device is updated successfully.</string>
    <string name="messages">Messages</string>

    <string name="sent_sms">Sent</string>
    <string name="received_sms">Received</string>
    <string name="new_sms">New Message</string>
    <string name="send">Send</string>
    <string name="alert_fill_message">Please fill all fields.</string>
    <string name="success_send_sms">Sent message successfully.</string>
    <string name="failure_send_sms">Sending message failure.</string>

</resources>
