<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal|top"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/bg_round_rect">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/icon_user"/>

            <EditText
                android:id="@+id/txt_phone_number"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:inputType="phone"
                android:hint="@string/phone_number"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:background="@null"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:visibility="visible"
            android:background="@drawable/bg_round_rect">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="6dp"
                android:src="@drawable/icon_password"/>

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:background="@null"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <CheckBox
                android:id="@+id/chk_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:checked="true"/>

            <CheckBox
                android:id="@+id/chk_show_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/show_password"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_signin"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/sign_in"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/bg_default_button"/>

        <TextView
            android:id="@+id/btn_reset_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/reset_password"/>

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginStart="25dp"-->
            <!--android:layout_marginEnd="25dp"-->
            <!--android:orientation="horizontal">-->

            <!--<Switch-->
                <!--android:id="@+id/switch_ip"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"/>-->
            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginStart="10dp"-->
                <!--android:textSize="14sp"-->
                <!--android:textColor="@color/colorPrimary"-->
                <!--android:text="@string/switch_base_url"/>-->

        <!--</LinearLayout>-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal|bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/not_have_account"
            android:textSize="14sp"
            android:textColor="@color/colorLightGray"/>

        <TextView
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>

</FrameLayout>